--- a/theCapitol.Data/theCapitol.Data.csproj
+++ b/theCapitol.Data/theCapitol.Data.csproj
@@ -51,14 +51,57 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Article.cs">
+      <DependentUpon>theCapitol.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Connection.cs">
+      <DependentUpon>theCapitol.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Leader.cs">
+      <DependentUpon>theCapitol.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="theCapitol.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>theCapitol.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="theCapitol.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>theCapitol.tt</DependentUpon>
+    </Compile>
+    <Compile Include="theCapitol.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>theCapitol.edmx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
     <None Include="packages.config" />
+    <EntityDeploy Include="theCapitol.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>theCapitol.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="theCapitol.edmx.diagram">
+      <DependentUpon>theCapitol.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="theCapitol.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>theCapitol.edmx</DependentUpon>
+      <LastGenOutput>theCapitol.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="theCapitol.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>theCapitol.edmx</DependentUpon>
+      <LastGenOutput>theCapitol.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
