--- a/theCapitol.Data/theCapitol.Data.csproj
+++ b/theCapitol.Data/theCapitol.Data.csproj
@@ -51,16 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Article.cs">
-      <DependentUpon>theCapitol.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Connection.cs">
-      <DependentUpon>theCapitol.tt</DependentUpon>
-    </Compile>
     <Compile Include="Leader.cs">
       <DependentUpon>theCapitol.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs">
+      <DependentUpon>theCapitol.tt</DependentUpon>
+    </Compile>
     <Compile Include="theCapitol.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
