--- a/rcliberty.Web/rcliberty.Web.csproj
+++ b/rcliberty.Web/rcliberty.Web.csproj
@@ -225,11 +225,14 @@
     <Content Include="Content\img\life_header.png" />
     <Content Include="Content\img\meet-jesus_sm-tile.png" />
     <Content Include="Content\img\ownership_sm-tile.png" />
+    <Content Include="Content\img\people\jp_heather.jpg" />
     <Content Include="Content\img\rc-kids_logo.png" />
     <Content Include="Content\img\read-bible_sm-tile.png" />
     <Content Include="Content\img\restoration-church_logo.png" />
     <Content Include="Content\img\tags\sunday-tag.jpg" />
-    <Content Include="Content\img\the-experience_banner.jpeg" />
+    <Content Include="Content\img\the-capitol-banner.png" />
+    <Content Include="Content\img\the-experience-banner.jpg" />
+    <Content Include="Content\img\weird-stuff-banner.jpg" />
     <Content Include="Content\img\what-was-i-thinking_banner.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -237,6 +240,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\jquery-1.12.1.ui.js" />
     <Content Include="_archive\404.shtml" />
     <Content Include="_archive\assets\example_1.jpg" />
     <Content Include="_archive\assets\example_2.jpg" />
@@ -457,6 +461,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\jquery-1.12.4.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
@@ -503,6 +508,9 @@
     <Content Include="_archive\assets\Thumbs.db" />
     <Content Include="_archive\help\images\Thumbs.db" />
     <Content Include="_archive\swf\soundmanager2_flash_xdomain.zip" />
+    <Content Include="Views\Home\Discover.cshtml" />
+    <Content Include="Views\Home\Connect.cshtml" />
+    <Content Include="Views\Home\Grow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
