--- a/rcliberty.Web/Views/Web.config
+++ b/rcliberty.Web/Views/Web.config
@@ -18,6 +18,8 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="rcliberty.Web" />
+        <!-- ViewHelpers -->
+        <add namespace="rcliberty.Web.HelpersAndExtensions"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
