--- a/rcliberty.Web/rcliberty.Web.csproj
+++ b/rcliberty.Web/rcliberty.Web.csproj
@@ -228,6 +228,7 @@
     <Content Include="Content\img\connect_header.png" />
     <Content Include="Content\img\core_tile.png" />
     <Content Include="Content\img\discover_header.png" />
+    <Content Include="Content\img\fight-night-banner.jpg" />
     <Content Include="Content\img\finances_sm-tile.png" />
     <Content Include="Content\img\give_header.png" />
     <Content Include="Content\img\grow_header.png" />
