update series & nav
- update current series logo
- update nav to include "Podcasts"
- update custom.css for nav li width

--- a/rcliberty.Web/rcliberty.Web.csproj
+++ b/rcliberty.Web/rcliberty.Web.csproj
@@ -243,6 +243,7 @@
     <Content Include="Content\img\people\jp_heather.jpg" />
     <Content Include="Content\img\rc-kids_logo.png" />
     <Content Include="Content\img\read-bible_sm-tile.png" />
+    <Content Include="Content\img\red-ink-jesus-banner.jpg" />
     <Content Include="Content\img\restoration-church_logo.png" />
     <Content Include="Content\img\tags\ag-tag.png" />
     <Content Include="Content\img\tags\facebook-tag.png" />
