set up/brainstorm
- add "media" action in homecontroller & generate view
- document ideas/todoin podcastmodels.cs

--- a/rcliberty.Web/rcliberty.Web.csproj
+++ b/rcliberty.Web/rcliberty.Web.csproj
@@ -551,6 +551,7 @@
     <Content Include="Views\Home\_BandRegistration.cshtml" />
     <Content Include="Views\Home\BandRegistration.cshtml" />
     <Content Include="Views\Home\Ministries.cshtml" />
+    <Content Include="Views\Home\Media.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -577,7 +578,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>55807</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
