--- a/rcliberty.Web/rcliberty.Web.csproj
+++ b/rcliberty.Web/rcliberty.Web.csproj
@@ -236,6 +236,7 @@
     <Content Include="Content\img\grow_header.png" />
     <Content Include="Content\img\headers\header-nav-bg.png" />
     <Content Include="Content\img\headers\header-nav-spacer.png" />
+    <Content Include="Content\img\just-believe-banner.jpg" />
     <Content Include="Content\img\life-groups_sm-tile.png" />
     <Content Include="Content\img\life-groups_tile.png" />
     <Content Include="Content\img\life_header.png" />
