data-driven media page
- added ViewModel to contain the collections of each type to display in the View
- added methods to access series/episode data
- organized a tile layout of series, then published the unique episode information in a modal for each series
- light styling/customization

--- a/rcliberty.Web/rcliberty.Web.csproj
+++ b/rcliberty.Web/rcliberty.Web.csproj
@@ -261,6 +261,7 @@
     <Content Include="Content\img\series\just-believe.jpg" />
     <Content Include="Content\img\series\myths-and-facts.jpg" />
     <Content Include="Content\img\series\red-ink-jesus.jpg" />
+    <Content Include="Content\img\series\spirit.jpg" />
     <Content Include="Content\img\spirit-power-unleashed-banner.jpg" />
     <Content Include="Content\img\tags\ag-tag.png" />
     <Content Include="Content\img\tags\facebook-tag.png" />
