--- a/rcliberty.Web/Web.config
+++ b/rcliberty.Web/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=rcliberty;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="rclibertyEntities" connectionString="metadata=res://*/rclibertyModels.csdl|res://*/rclibertyModels.ssdl|res://*/rclibertyModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=rcliberty;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
