--- a/rcliberty.Web/rcliberty.Web.csproj
+++ b/rcliberty.Web/rcliberty.Web.csproj
@@ -186,10 +186,6 @@
     </Compile>
     <Compile Include="HelpersAndExtensions\ViewHelpers.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\BandBattleViewModel.cs" />
-    <Compile Include="Models\BandMemberViewModel.cs" />
-    <Compile Include="Models\BandViewModel.cs" />
-    <Compile Include="Models\ContactViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\PodcastModels.cs" />
@@ -203,11 +199,16 @@
     <Content Include="Content\custom.css" />
     <Content Include="Content\datatables.min.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\img\!test\new-test-series.jpg" />
+    <Content Include="Content\img\!test\test-series-1.jpg" />
+    <Content Include="Content\img\!test\test.jpg" />
     <Content Include="Content\img\attend_header.png" />
     <Content Include="Content\img\backgrounds\bg2.jpg" />
     <Content Include="Content\img\backgrounds\bg-main.jpg" />
     <Content Include="Content\img\backgrounds\rcliberty-service-bw.jpg" />
     <Content Include="Content\img\baptism_sm-tile.png" />
+    <Content Include="Content\img\battle-storm-banner.jpg" />
+    <Content Include="Content\img\breakout-banner.jpg" />
     <Content Include="Content\img\buttons\btn-attend-white.png" />
     <Content Include="Content\img\buttons\btn-attend-gray.png" />
     <Content Include="Content\img\buttons\btn-connect-white.png" />
@@ -238,6 +239,7 @@
     <Content Include="Content\img\core_tile.png" />
     <Content Include="Content\img\discover_header.png" />
     <Content Include="Content\img\duck-dynasty-promo-banner.png" />
+    <Content Include="Content\img\everything-banner.jpg" />
     <Content Include="Content\img\fight-night-banner.jpg" />
     <Content Include="Content\img\finances_sm-tile.png" />
     <Content Include="Content\img\give_header.png" />
@@ -249,6 +251,7 @@
     <Content Include="Content\img\life-groups_tile.png" />
     <Content Include="Content\img\life_header.png" />
     <Content Include="Content\img\meet-jesus_sm-tile.png" />
+    <Content Include="Content\img\MOVE-banner.jpg" />
     <Content Include="Content\img\ownership_sm-tile.png" />
     <Content Include="Content\img\people\jp_heather.jpg" />
     <Content Include="Content\img\rc-kids_logo.png" />
@@ -273,6 +276,8 @@
     <Content Include="Content\img\theCapitol-logo-md.png" />
     <Content Include="Content\img\theCapitol-promo-resize2.png" />
     <Content Include="Content\img\theCapitol-promo.jpg" />
+    <Content Include="Content\img\tis-the-season-banner.jpg" />
+    <Content Include="Content\img\ultimate-protection-banner.jpg" />
     <Content Include="Content\img\weird-stuff-banner.jpg" />
     <Content Include="Content\img\what-was-i-thinking-banner.jpg" />
     <Content Include="Content\img\who-am-i-banner.jpg" />
@@ -287,10 +292,13 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="ReadMe.txt" />
+    <Content Include="Scripts\admin.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\datatables.min.js" />
     <Content Include="Scripts\jquery-1.12.1.ui.js" />
+    <Content Include="Scripts\contact-forms.js" />
+    <Content Include="Scripts\shared.js" />
     <Content Include="_archive\404.shtml" />
     <Content Include="_archive\assets\example_1.jpg" />
     <Content Include="_archive\assets\example_2.jpg" />
@@ -587,10 +595,10 @@
     <Content Include="Views\InitAdmin\Error.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\AddNewSeries.cshtml" />
+    <Content Include="Views\Shared\_GuestVisit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\img\!test\" />
     <Folder Include="_archive\assets\used\" />
   </ItemGroup>
   <ItemGroup>
