--- a/rcliberty.Web/packages.config
+++ b/rcliberty.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net452" />
   <package id="IdentityUserRoleManagement" version="1.0.0" targetFramework="net452" />
   <package id="jQuery" version="1.12.1" targetFramework="net452" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.3" targetFramework="net452" />
@@ -12,6 +13,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net452" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="3.8.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="4.1.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.1" targetFramework="net452" />
